--- a/preseed.cfg
+++ b/preseed.cfg
@@ -11,6 +11,7 @@ d-i netcfg/wireless_wep string
 
 # Mirror settings.
 d-i mirror/country string manual
+d-i mirror/protocol string https
 d-i mirror/http/hostname string mirror.hetzner.com
 d-i mirror/http/directory string /debian
 d-i mirror/http/proxy string
