--- a/preseed.cfg
+++ b/preseed.cfg
@@ -15,6 +15,9 @@ d-i mirror/protocol string https
 d-i mirror/http/hostname string mirror.hetzner.com
 d-i mirror/http/directory string /debian
 d-i mirror/http/proxy string
+d-i mirror/https/hostname string mirror.hetzner.com
+d-i mirror/https/directory string /debian
+d-i mirror/https/proxy string
 
 # Root account setup. You can set password in plain-text or pre-encrypted.
 d-i passwd/root-login boolean false
