fix debian mirror path

--- a/preseed.cfg
+++ b/preseed.cfg
@@ -13,10 +13,10 @@ d-i netcfg/wireless_wep string
 d-i mirror/country string manual
 d-i mirror/protocol string https
 d-i mirror/http/hostname string mirror.hetzner.com
-d-i mirror/http/directory string /debian
+d-i mirror/http/directory string /debian/packages
 d-i mirror/http/proxy string
 d-i mirror/https/hostname string mirror.hetzner.com
-d-i mirror/https/directory string /debian
+d-i mirror/https/directory string /debian/packages
 d-i mirror/https/proxy string
 
 # Root account setup. You can set password in plain-text or pre-encrypted.
